# motion_tracking

./: .gitattributes  .gitignore  LICENSE  README.md  generate_dataset.sh  pyproject.toml  setup.py  train.sh
active_adaptation/assets/xbot_l7/: CMakeLists.txt  package.xml
active_adaptation/assets/xbot_l7/meshes/: base_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_arm_base_link.STL  left_arm_flange_link.STL  left_arm_yaw_link.STL  left_elbow_pitch_link.STL  left_elbow_yaw_link.STL  left_foot_ee_link.STL  left_hand_back_link.STL  left_hand_ee_link.STL  left_hand_index_bend_link.STL  left_hand_index_rota_link1.STL  left_hand_index_rota_link2.STL  left_hand_index_rota_tip.STL  left_hand_index_rotaback_link1.STL  left_hand_index_rotaback_link2.STL  left_hand_link.STL  left_hand_mid_link1.STL  left_hand_mid_link2.STL  left_hand_mid_tip.STL  left_hand_midback_link1.STL  left_hand_midback_link2.STL  left_hand_pinky_link1.STL  left_hand_pinky_link2.STL  left_hand_pinky_tip.STL  left_hand_pinkyback_link1.STL  left_hand_pinkyback_link2.STL  left_hand_ring_link1.STL  left_hand_ring_link2.STL  left_hand_ring_tip.STL  left_hand_ringback_link1.STL  left_hand_ringback_link2.STL  left_hand_thumb_bend_link.STL  left_hand_thumb_rota_link1.STL  left_hand_thumb_rota_link2.STL  left_hand_thumb_rota_tip.STL  left_hand_thumb_rotaback_link1.STL  left_hand_thumb_rotaback_link2.STL  left_hip_pitch_link.STL  (+65 more)
active_adaptation/assets/xbot_l7/mjcf/: xbot_l7.xml
active_adaptation/assets/xbot_l7/urdf/: rel3_4_pelvis_modify_intertial_raw_torso_base_link_fixed_neck_ankle_roll_raw_collision.urdf
cfg/: eval.yaml  (+1 more)
sim2real/: .gitignore  README.md  pyproject.toml  requirements.txt
sim2real/assets/ckpts/G1TRACKING-02-15_15-40/: policy.json
sim2real/assets/ckpts/G1TRACKING-03-16_14-15_0315.2/: policy.json  policy.onnx
sim2real/assets/data/: teleop_retarget_20260308_123227_00001905.npz
sim2real/assets/g1/: g1.json  g1.xml  g1_29dof_rev_1_0_policy_fk.urdf
sim2real/config/: controller.yaml  tracking.yaml
sim2real/src/: deploy.py  motion_select.py  motion_sources.py  observation.py  paths.py  policy.py  sim2sim.py
sim2real/src/common/: command_helper.py  fk_utils.py  joint_mapper.py  math_utils.py  remote_controller.py  utils.py
sim2real/teleop/: README.md  default_mimic_obs.py  record_teleop_retarget_zmq.py  record_teleop_retarget_zmq.sh  teleop_pose_50hz.sh  xrobot_teleop_to_pose_zmq_server.py
(+99 files in other folders)
