<?xml version="1.0"?>
<package format="2">
    <name>xbot_description</name>
    <version>0.0.1</version>
    <description>robotera robot description files</description>
    <maintainer email="guangxiao.yang@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="guangxiao.yang@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
